Fixed that panels weren't visible.

--- a/webroot/besogo/css/besogo.css
+++ b/webroot/besogo/css/besogo.css
@@ -38,8 +38,9 @@
      user-select: none;
 }
 
-.besogo-panels {
-    display: none;
+.besogo-panels
+{
+    display: flex;
     flex-direction: column;
 	flex-basis: 50%;
     align-items: center;
